# ChangeLog for dev-libs/e_dbus
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/e_dbus/ChangeLog,v 1.17 2014/01/25 16:22:40 tommy Exp $

*e_dbus-1.7.10_pre1 (25 Jan 2014)

  25 Jan 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +e_dbus-1.7.10_pre1.ebuild:
  Version bump for move to efl-1.8

*e_dbus-1.7.9 (12 Nov 2013)

  12 Nov 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +e_dbus-1.7.9.ebuild,
  -e_dbus-1.7.5.ebuild, -e_dbus-1.7.6.ebuild:
  Version bump, drop old

*e_dbus-1.7.8 (28 Aug 2013)

  28 Aug 2013; Mike Frysinger <vapier@gentoo.org> +e_dbus-1.7.8.ebuild:
  Version bump.

  21 Jul 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  connman is a global USE flag now

*e_dbus-1.7.6 (10 Apr 2013)

  10 Apr 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +e_dbus-1.7.6.ebuild,
  -e_dbus-1.7.4.ebuild:
  Version bump, drop old

*e_dbus-1.7.5 (04 Jan 2013)

  04 Jan 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +e_dbus-1.7.5.ebuild:
  Version bump

*e_dbus-1.7.4 (21 Dec 2012)

  21 Dec 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -e_dbus-1.7.0.ebuild, -e_dbus-1.7.1.ebuild, +e_dbus-1.7.4.ebuild:
  Version bump, drop old

*e_dbus-1.7.1 (22 Oct 2012)

  22 Oct 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -e_dbus-1.1.0.ebuild, +e_dbus-1.7.1.ebuild:
  Version bump, dro p old

  10 Sep 2012; Mike Frysinger <vapier@gentoo.org> e_dbus-1.7.0.ebuild:
  Add arm love.

*e_dbus-1.7.0 (08 Sep 2012)

  08 Sep 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -e_dbus-1.0.1.ebuild, +e_dbus-1.7.0.ebuild:
  Version bump, drop old

  27 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> e_dbus-1.0.1.ebuild,
  e_dbus-1.1.0.ebuild:
  Pin to SLOT="0" of sys-fs/udisks.

*e_dbus-1.1.0 (08 Feb 2012)

  08 Feb 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -e_dbus-1.0.0.ebuild, +e_dbus-1.1.0.ebuild:
  Version bump, drop old

*e_dbus-1.0.1 (29 May 2011)
