@@ -1,20 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST e_dbus-1.7.10_pre1.tar.bz2 439191 SHA256 b93f778a4bf50ce044b4798e08a03f62e9b890c47305f9d5839989481f38ddd4 SHA512 db3e3106cd3f66699dd59433beb8592115a8970982c7dc49f04458bc162acbbece5c6ec08bea994cc7eca04fe786ad45961bb555d2dfd364d07d3673d144b3c4 WHIRLPOOL 2f351946be4e47722fb6c027641d0054aed5fcd1523a02d20758763423100086e4c5bcf129f448c764a39ce8b4748c62b58c5e8dc9d3e676077866879b219f04
+DIST e_dbus-1.7.10.tar.bz2 439191 SHA256 b93f778a4bf50ce044b4798e08a03f62e9b890c47305f9d5839989481f38ddd4 SHA512 db3e3106cd3f66699dd59433beb8592115a8970982c7dc49f04458bc162acbbece5c6ec08bea994cc7eca04fe786ad45961bb555d2dfd364d07d3673d144b3c4 WHIRLPOOL 2f351946be4e47722fb6c027641d0054aed5fcd1523a02d20758763423100086e4c5bcf129f448c764a39ce8b4748c62b58c5e8dc9d3e676077866879b219f04
 DIST e_dbus-1.7.8.tar.bz2 439067 SHA256 69de464ed89c701df2ee90baa3ca2d9d0d51f731c8fd495cb8c2dcaeb1d4fa16 SHA512 e03cc5c14a2d9b541ee2892e488698b0e3d932b6f3a6139ebb5090f5ee403c2b697cae1729535a5c3a8c4dc6258f6becc327ec808696a3b95fda600f38a103e2 WHIRLPOOL 7b72080fd652d4b9a05370d59a128d4dc6ec434a2d24ebca4f398f08bdce2e581b008e319b859e9a1d7197e571001327f582f201146fff5e0a41456d9e53ab9a
 DIST e_dbus-1.7.9.tar.bz2 438685 SHA256 c6d9ce7bf75a70cc777473c61837e676c978a6280be2cb925c4090d17cd89678 SHA512 72e78a99b3a6509432123a978ff8447084d90c6c10f6485226f467e12056ea3a205e5c906f07e59a219952a36d341bc1a37003f9573eba78ae31cbd2dd6f4c95 WHIRLPOOL b1d93d59c290cde2c01b9aec276b8501f5e4a53574f868b2dd8ed7a0aa7e2c87adbd29eacfa9667495f02fa5dd63d18448133dea24d387dc628eb3391aed2b67
-EBUILD e_dbus-1.7.10_pre1.ebuild 1751 SHA256 d7cf1e58b9dd635760e316abefe6157a6e314a8466f2a9f71e446964df865f7e SHA512 f6a96e8aced4a154e2fc50bac520a7f9c2815fce5bcc8e34a281c9ac2153076b0bd29c2e641bf000f513924a57f438d451f2abc20508bf702686164d6fd19737 WHIRLPOOL e3d2c7a26b7f58b31c7b1b95b26b309197e16f1d75a34fb1b946c9b3e45ba4c5f0eb655385a80cdd4d0a4dfc7c3a1059f41e10ee1281b889193a438a7b717856
+EBUILD e_dbus-1.7.10.ebuild 1634 SHA256 05b60150db334ac87fe8c195b7bb161094db8c16c1a265c9f347385869ea2c4f SHA512 267b112a8a1ee0a08e5d46aba4eb4b4fca952d21cfc01611721b6a58a8e49677daa962e44431a3589fb70a7ff595d29fcc2612832101fbb0a0a13ea72c2163ad WHIRLPOOL 945f59e3c18d4debc008efdee3449f31f6a9568ed8738fa3a46514ff2a7ecd9c592985154c7a11d851d6968c81119dcf4c9e961730a3545cd16242cf56471d05
 EBUILD e_dbus-1.7.8.ebuild 1674 SHA256 7de774e30fe9f48f2961090b6b1a0be4a7110805163143b69939b5ce08646b11 SHA512 d54c931bed852165544734961c49ba34e85dbb5d3faa230c8c2f5dab79d300a7851dad907122a5854940de19e14bf0afba88766d365e586b0643cc489dcdea03 WHIRLPOOL 0e5d2d6eafbaf41ad68d607b64d07d0bcbdaafcbc1aa85680fd270f3aa50842b498cb98b1032ef7a86fec46056999ab3e0f7acdb1cd3f26d809e2c76d7e9457b
 EBUILD e_dbus-1.7.9.ebuild 1673 SHA256 55b2274a94cba946e91e35614bb324df246dada804a178a32ec0f319e6c08ab5 SHA512 464b0cc543a9e6642570ff6ce6387072dcc28796a17d637f5ec8bb31fff8b11ed1228badc64265eaf6e600929d69579eb8a3132274653e3cbf710697122b2ade WHIRLPOOL 88591d6345d7b59545faff6edfa95afd3978d7d81e415824e6f5b3ce2880814a60ea2255b2e79990f65e05654408c1488d21418a48748d9758e88eb11fd4c98a
-MISC ChangeLog 2686 SHA256 84784ab0df2f63d11f5788863d3a463f43412178fd8888dea643e5d4a45e2083 SHA512 039c1b5eefe69ae3e413cbc478ebc72440418cb19e82f6cb3e989768604b92744bf9a164d1666c1dccb895deee6157adae95ca94941bc5337d68cd321d73e8bf WHIRLPOOL ec48a889f25ca774c93cdd814269f7b085ebe6846d8e1c0cfa8062b6d508ca394c5dee20eaa1f45959028659620b73f4579c880fb9ab4ca78c27e1dd647a5c3a
+MISC ChangeLog 2862 SHA256 7e19381f3a3197520f0c59ad265ae4e1c3dfbb35bba99a671d8af716d94c3a0b SHA512 a80cb75b2389b6bcb241c479445b43f31efed4e0eb32bdee9d02727b56c739b78c95a0db4e2b34eed2bb1db50cdc4213b23bfafdc88f67bd50e45202cf271245 WHIRLPOOL 367191118167d1b48493a084d6be11de7b22b708073705e959219f7a986dfa6f2dcb7a2a4f83a175be8af333e63c89e67daa36738515a781ab05cd880e42065f
 MISC metadata.xml 450 SHA256 edf3427a27ea46c4cc67c19bc2261401f9bb698e929b013f41d4ae751c4ba110 SHA512 8e8e35e12ff9ddf62598e79b90b2b9fa7576cd6d9e04485d40cf220799db12ee58bbe695a729ccf99c98011095b8f1032adcfdaf0865a6554cfb7156c7ea4b40 WHIRLPOOL ef957dd7bc319141ac9155e5ef0b6b25bf0e870af59511aba944ef4a2cffd5402a1e3e141891a186779877827b9c3e2f5d2684a99338719b3fdea9ee52aab1e5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iJwEAQEIAAYFAlLj5NYACgkQG7kqcTWJkGfo7AP/d8ip9g/dZYdqyVlwtddpqKJX
-oKrQwlsPdGVJK4jDKDyCiA800GXDs4pU42P3UcNydlsuhp086sLxKVMdHMrZy4Fy
-DewadZzY1iszpSGmw6X3RtrKQPMYS3NZ3eYRWWVVSHVQ9lstAuleNB74aoF0sVyo
-CCwhH8kPw5tprm3G9t0=
-=9x+3
+iJwEAQEIAAYFAlLrwrUACgkQG7kqcTWJkGd1KQP+PlfzuKnhZIZznr3zSRQS5niM
+MyijTrDJUTePSFqjhdUaKip8RaIYzqkjg0l6bXH8I0sdRJg1pKJz3qv/aBD06pJ3
+cZEDHNVGyo1dwP656e50WKUltuXap+gnJVYCBvw1Mt53D6qQ3nxfq2Jo6KFO/YaC
+ma2rieubxnaGQmXAJtQ=
+=C7G4
 -----END PGP SIGNATURE-----
