@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/e_dbus
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/e_dbus/ChangeLog,v 1.17 2014/01/25 16:22:40 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/e_dbus/ChangeLog,v 1.18 2014/01/31 15:35:11 tommy Exp $
+
+*e_dbus-1.7.10 (31 Jan 2014)
+
+  31 Jan 2014; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  +e_dbus-1.7.10.ebuild, -e_dbus-1.7.10_pre1.ebuild:
+  Version bump, drop pre-release
 
 *e_dbus-1.7.10_pre1 (25 Jan 2014)
 
